# ar-materijali

./: CMakeLists.txt
01_iskazne_formule/: main.cpp
02_iskazna_logika/: main.cpp
03_normalne_forme/: main.cpp
04_sat/: sat.cpp  tseitin.cpp
05_minisat/: brojac.cpp
06_logika_prvog_reda/: fol.h  main.cpp
07 fol_normalne_forme/: main.cpp
08 unifikacija/: resolution.cpp
old/01_iskazne_formule/: a.out  base.cpp  visitor.cpp
old/02_iskazna_logika/: main.cpp
old/03_normalne_forme/: main.cpp
old/05_minisat/: brojac.cpp  profesije.cpp
old/07 fol_normalne_forme/: a.out
